--- a/package.json
+++ b/package.json
@@ -10,15 +10,30 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "",
+  "author": "Hung Backtracking",
   "license": "ISC",
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-x-hub": "^1.0.4",
+    "megahash": "^1.0.5",
     "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
+    "phin": "^3.7.1",
+    "pidusage": "^3.0.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "eslint": "^9.4.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-tsdoc": "^0.3.0",
+    "globals": "^15.4.0",
+    "nodemon": "^3.1.3",
+    "prettier": "^3.3.2"
   }
 }
