--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Hung Backtracking",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.13.0",
     "async-mutex": "^0.5.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
