--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.13.0",
     "async-mutex": "^0.5.0",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
